# sprynger

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
docs/source/: conf.py  how_to_query.rst  index.rst  initialization.rst  requirements.txt
docs/source/classes/: Meta.rst  Metadata.rst  OpenAccess.rst  OpenAccessBook.rst  OpenAccessJournal.rst
docs/source/query/: supported_query_parameters.rst
my_dev/: dev_1.ipynb
sprynger/: __init__.py  base.py  exceptions.py  meta.py  metadata.py  openaccess.py  openaccess_article.py  openaccess_base.py  openaccess_book.py  openaccess_chapter.py  openaccess_journal.py  retrieve.py
sprynger/tests/: test_config.toml  test_exceptions.py  test_meta.py  test_metadata.py  test_openaccess.py  test_openaccess_book.py  test_openaccess_journal.py  test_retrieve.py  test_startup.py
sprynger/utils/: __init__.py  constants.py  create_config.py  data_structures.py  fetch.py  parse.py  parse_openaccess.py  startup.py
