[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprynger"
version = "0.0.0a3"
authors = [
  { name="Nils Herrmann", email="nils_herrmann@outlook.de" },
]
description = "An API wrapper for Springer Nature"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["lxml", "requests"]
keywords = ["API", "Springer", "wrapper", "requests", "lxml"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nils-herrmann/sprynger"
Issues = "https://github.com/nils-herrmann"
Documentation = "https://sprynger.readthedocs.io/en/latest/"


[tool.setuptools.packages.find]
include = ["sprynger", "sprynger.*"]
