[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprynger"
version = "0.4.1"
authors = [
  { name="Nils A. Herrmann de Alba", email="nils_herrmann@outlook.de" },
]
description = "An API wrapper for Springer Nature"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "lxml",
    "requests",
    "urllib3",
    "platformdirs",
    "tomli>=1.2.3; python_version < '3.11'"
]
keywords = ["API", "Springer", "wrapper", "requests", "lxml"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nils-herrmann/sprynger"
Issues = "https://github.com/nils-herrmann"
Documentation = "https://sprynger.readthedocs.io/en/latest/"


[tool.setuptools.packages.find]
include = ["sprynger", "sprynger.*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
